--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
         "@types/node-sass": "^4.11.3",
+        "@types/redux-logger": "^3.0.9",
         "babel-loader": "^9.1.2",
         "css-loader": "^6.7.3",
         "html-loader": "^4.2.0",
