--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
         "module": "esnext",
         "moduleResolution": "node",
         "resolveJsonModule": true,
-        "isolatedModules": false,
+        "isolatedModules": true,
         "noImplicitAny": false,
         "noEmit": false,
         "jsx": "react-jsx",
